fix for an unexpected layout of shifted dd elements
git-svn-id: file:///svn2git/svn/repos/emarket/website/trunk@531 5bad16f7-618a-4fe3-8011-2f6d34f883f8

--- a/web/css/boxmodel-content.css
+++ b/web/css/boxmodel-content.css
@@ -2223,7 +2223,7 @@ a.basic
 .photoGallery > dl {
  display:block;
  clear:both;
- margin:1em auto 3em;
+ margin:0px;
 }
 
 .photoGallery > dl > dt {
